--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,9 +25,9 @@ jobs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v3
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ secrets.AWS_REGION }}
+        aws-access-key-id: AKIAWQUOZHEJ5GZB4473
+        aws-secret-access-key: 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
+        aws-region: ap-south-1
 
     - name: Build SAM App
       run: sam build
@@ -36,7 +36,7 @@ jobs:
       run: |
         sam deploy \
           --stack-name marsNodejs \
-          --region ${{ secrets.AWS_REGION }} \
+          --region ap-south-1 \
           --capabilities CAPABILITY_IAM \
           --no-confirm-changeset \
           --no-fail-on-empty-changeset
