--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,42 +1,26 @@
-name: Deploy Node.js Lambda with SAM
-
-on:
-  push:
-    branches:
-      - main  # or your deployment branch
-
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout source code
-      uses: actions/checkout@v3
-
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18'
-
-    - name: Install AWS SAM CLI
+    - name: Configure AWS CLI
       run: |
-        pip install aws-sam-cli
+        aws configure set aws_access_key_id AKIAWQUOZHEJ5GZB4473
+        aws configure set aws_secret_access_key 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
+        aws configure set default.region ap-south-1
 
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v3
-      with:
-        aws-access-key-id: AKIAWQUOZHEJ5GZB4473
-        aws-secret-access-key: 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
-        aws-region: ap-south-1
+    - name: Zip Lambda Code
+      run: zip -r function.zip .
 
-    - name: Build SAM App
-      run: sam build
-
-    - name: Deploy to AWS
+    - name: Create or Update Lambda
       run: |
-        sam deploy \
-          --stack-name marsNodejs \
-          --region ap-south-1 \
-          --capabilities CAPABILITY_IAM \
-          --no-confirm-changeset \
-          --no-fail-on-empty-changeset
+        FUNCTION_EXISTS=$(aws lambda get-function --function-name MySyncLambda || echo "false")
+        if [ "$FUNCTION_EXISTS" = "false" ]; then
+          echo "Creating new Lambda function..."
+          aws lambda create-function \
+            --function-name MySyncLambda \
+            --runtime nodejs18.x \
+            --role arn:aws:iam::arn:aws:iam::448049789203:role/awslamdarole \
+            --handler index.handler \
+            --zip-file fileb://function.zip
+        else
+          echo "Updating existing Lambda function..."
+          aws lambda update-function-code \
+            --function-name MySyncLambda \
+            --zip-file fileb://function.zip
+        fi
